@@ -131,4 +131,21 @@
             </ScriptProperty>
         </Members>
     </Type>
+    <Type>
+        <Name>Carbon.Firewall.Rule</Name>
+        <Members>
+            <AliasProperty>
+                <Name>LocalIP</Name>
+                <ReferencedMemberName>
+                    LocalIPAddress
+                </ReferencedMemberName>
+            </AliasProperty>
+            <AliasProperty>
+                <Name>RemoteIP</Name>
+                <ReferencedMemberName>
+                    RemoteIPAddress
+                </ReferencedMemberName>
+            </AliasProperty>
+        </Members>
+    </Type>
 </Types>
