@@ -1,0 +1,10 @@
+﻿namespace Carbon.Firewall
+{
+	public enum RuleInterfaceType
+	{
+		Any = 0,
+		Wireless,
+		Lan,
+		Ras
+	}
+}
